--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "tsc": "./node_modules/typescript/bin/tsc -p tsconfig.build.json",
     "build": "npm run build-rust && npm run tsc && npm run create-resources",
-    "create-resources": "cp ./src/tasks/price-feeds/mtgox-weekly.json ./dist/tasks && node dist/api/fetch-version.js",
+    "create-resources": "node dist/api/fetch-version.js",
     "package": "npm run build && rm -rf package && mv dist package && mv node_modules package && mv rust-gbt package && npm run package-rm-build-deps",
     "package-rm-build-deps": "(cd package/node_modules; rm -r typescript @typescript-eslint @napi-rs ../rust-gbt/target ../rust-gbt/node_modules ../rust-gbt/src)",
     "start": "node --max-old-space-size=2048 dist/index.js",
