--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mempool-backend",
   "version": "3.0.0-dev",
-  "description": "Bitcoin mempool visualizer and blockchain explorer backend",
+  "description": "Dogecoin mempool visualizer and blockchain explorer backend",
   "license": "GNU Affero General Public License v3.0",
   "homepage": "https://mempool.space",
   "repository": {
@@ -12,7 +12,7 @@
     "url": "https://github.com/mempool/mempool/issues"
   },
   "keywords": [
-    "bitcoin",
+    "dogecoin",
     "mempool",
     "blockchain",
     "explorer",
