--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mempool-frontend",
+  "name": "dogepool-frontend",
   "version": "3.0.0-dev",
   "description": "Dogecoin mempool visualizer and blockchain explorer backend",
   "license": "GNU Affero General Public License v3.0",
@@ -15,8 +15,7 @@
     "dogecoin",
     "mempool",
     "blockchain",
-    "explorer",
-    "liquid"
+    "explorer"
   ],
   "main": "index.ts",
   "scripts": {
